# qbox

./: .cookiecutter.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/qbox/: __init__.py  qbox.py
tests/: test_main.py  test_qbox.py
