[tool.poetry]
name = "qbox"
version = "0.0.1-alpha.0"
description = "Quantum Box"
authors = ["Greg Twohig"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/gtwohig/qbox"
repository = "https://github.com/gtwohig/qbox"
documentation = "https://qbox.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/gtwohig/qbox/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = { extras = ["toml"], version = "^7.0" }
safety = "^2.3.5"
mypy = "^0.991"
typeguard = "^2.13.3"
xdoctest = { extras = ["colors"], version = "^1.1.0" }
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.21.0"
flake8 = "^5.0.4"
black = "^22.12"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^4.3.0"
Pygments = "^2.14.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["qbox"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
