[tool.poetry]
name = "qbox"
version = "0.0.1-alpha.0"
description = "Quantum Box"
authors = ["Greg Twohig"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/gtwohig/qbox"
repository = "https://github.com/gtwohig/qbox"
documentation = "https://qbox.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
Changelog = "https://github.com/gtwohig/qbox/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3,<9.0"
coverage = { extras = ["toml"], version = "^7.2" }
mypy = "^1.2"
typeguard = ">=3.0.2,<5.0.0"
xdoctest = { extras = ["colors"], version = "^1.1.1" }
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^3.2.2"
flake8 = "^7.0.0"
black = ">=23.3,<25.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.1.7"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.4.0"
sphinx-rtd-theme = ">=1.2,<3.0"
sphinx-click = ">=4.4,<6.0"
Pygments = "^2.14.0"
safety = "^3.0.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["qbox"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
